--- a/eliminar.html
+++ b/eliminar.html
@@ -30,7 +30,7 @@
         <label for="contraN">Contraseña: </label>
         <input type="text" name="contraN" id="contraN" disabled><br>
         <label for="rol">Rol: </label>
-        <select name="rol" id="rol">
+        <select name="rol" id="rol" disabled>
             <option value="Empleado">Empleado</option>
             <option value="Administrador">Administrador</option>
         </select><br><br>
