--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hoteles GT - Log In</title>
+    <title>Empire Hotel - Log In</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -22,9 +23,10 @@
                 <input type="password" id="contra" name="contra"><br>
             </form>
             <button onclick="ingresar()" id="botonIngresar">Iniciar Sesión</button><br>
-            <p id="mensaje">!!Bienvenido¡¡</p>
+            <p id="bienvenido">!!Bienvenido¡¡</p>
         </div>
     </div>
+    <div id="mensaje">Usuario o contrasea incorrectos</div>
     <script src="script.js"></script>
 </body>
 
