Agregando placeholder para facilitar ingreso para su calificacion

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div id="login">
             <form>
                 <label for="usuario">Usuario: </label><br>
-                <input type="email" id="usuario" name="usuario"><br><br>
+                <input placeholder="luislopez@hotel.com" type="email" id="usuario" name="usuario"><br><br>
                 <label for="contra">Contraseña: </label><br>
-                <input type="password" id="contra" name="contra"><br>
+                <input placeholder="admin" type="password" id="contra" name="contra"><br>
             </form>
             <button onclick="ingresar()" id="botonIngresar">Iniciar Sesión</button><br>
             <p id="bienvenido">!!Bienvenido¡¡</p>
