--- a/ver.html
+++ b/ver.html
@@ -30,7 +30,7 @@
         <input type="text" name="contraN" id="contraN" disabled><br>
         <label for="rol">Rol: </label>
         <select name="rol" id="rol" disabled>
-            <option value="Empleado">Empleado</option>
+            <option value="Gerente">Gerente</option>
             <option value="Administrador">Administrador</option>
         </select><br><br>
     </form>
