--- a/modificar.html
+++ b/modificar.html
@@ -27,7 +27,7 @@
         <label for="fecha">Fecha de Nacimiento: </label>
         <input type="date" name="fecha" id="fecha"><br>
         <label for="contraN">Contraseña: </label>
-        <input type="text" name="contraN" id="contraN"><br>
+        <input type="password" name="contraN" id="contraN"><br>
         <label for="rol">Rol: </label>
         <select name="rol" id="rol">
             <option value="Gerente">Gerente</option>
