--- a/ver.html
+++ b/ver.html
@@ -27,7 +27,7 @@
         <label for="fecha">Fecha de Nacimiento: </label>
         <input type="date" name="fecha" id="fecha" disabled><br>
         <label for="contraN">Contraseña: </label>
-        <input type="text" name="contraN" id="contraN" disabled><br>
+        <input type="password" name="contraN" id="contraN" disabled><br>
         <label for="rol">Rol: </label>
         <select name="rol" id="rol" disabled>
             <option value="Gerente">Gerente</option>
